--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="col">
                 <div class="row">
-                    <p>We are a Pakistani supplier of the Zombies chew.</p>
+                    <p class="fs-4">Zombieats is a reliable seller of the popular sweet "Zombies." We offer excellent prices and unmatched customer service.</p>
                 </div>
             </div>
             <div class="col">
