--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
             </div>
             <div class="col">
                 <div class="row">
-                    <p class="fs-4">Zombieats is a reliable seller of the popular sweet "Zombies." We offer excellent prices and unmatched customer service.</p>
+                    <p class="fs-3">Zombieats is a reliable seller of the popular sweet "Zombies." We offer excellent prices and unmatched customer service. Contact us via our socials to buy from us.</p>
                 </div>
             </div>
             <div class="col">
-                <div class="row">
-                    <img src="zombie_blue_rasp_1200x-2244933517-removebg-preview.png" alt="Zombie Chew Image" style="width: 75%; height: 75%;"></img>
+                <div class="row-justify-content-center">
+                    <img src="zombie_blue_rasp_1200x-2244933517-removebg-preview.png" alt="Zombie Chew Image" style="width: 50%; height: 50%; "></img>
                 </div>
             </div>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
     </body>
 </html>
