--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     </head>
     <body>
-        <div class="container-fluid bg-danger-subtle">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary bg-danger-subtle">
+        <div class="container bg-danger-subtle">
+          <!--Navbar-->
+            <div class="row">
+              <nav class="navbar navbar-expand-lg bg-body-tertiary bg-danger-subtle">
                 <div class="container-fluid bg-danger-subtle">
                   <a class="navbar-brand" href="#">Navbar</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,11 +37,12 @@
                   </div>
                 </div>
               </nav>
-            <div class="col">
-                <h1 class="fw-semibold" style="font-size: 500%;">Welcome to Zombieats</h1>
             </div>
-            <div class="col">
-                <div class="row">
+            <div class="row">
+                <div class="col"><h1 class="fw-semibold" style="font-size: 500%;">Welcome to Zombieats</h1></div>
+            </div>
+            <div class="row">
+                <div class="col">
                     <p class="fs-3">Zombieats is a reliable seller of the popular sweet "Zombies." We offer excellent prices and unmatched customer service. Contact us via our socials to buy from us.</p>
                 </div>
             </div>
