--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     </head>
     <body>
-        <div class="container bg-danger-subtle">
+        <div class="container-fluid bg-danger-subtle">
           <!--Navbar-->
             <div class="row">
               <nav class="navbar navbar-expand-lg bg-body-tertiary bg-danger-subtle">
